syntax = "proto3";

package helloworld;

option java_package = "com.proto.helloworld";
option java_multiple_files = true;

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply);

  rpc SayRepeatHello (RepeatHelloRequest) returns (stream HelloReply);
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}

message RepeatHelloRequest {
  string name = 1;
  int32 count = 2;
}